添加莫队算法.cpp

--- a/c++/数据结构/config
+++ b/c++/数据结构/config
@@ -15,3 +15,4 @@
 <k²æ¹þ·òÂüÊ÷> <k²æ¹þ·òÂüÊ÷.cpp> <k²æ¹þ·òÂüÊ÷.tex> <>
 <µÑ¿¨¶ûÊ÷> <µÑ¿¨¶ûÊ÷.cpp> <µÑ¿¨¶ûÊ÷.tex> <>
 <ÎöºÏÊ÷> <ÎöºÏÊ÷.cpp> <ÎöºÏÊ÷.tex> <>
+<Äª¶ÓËã·¨> <Äª¶ÓËã·¨.cpp> <> <>
