--- a/c++/杂项/config
+++ b/c++/杂项/config
@@ -5,6 +5,7 @@
 <约瑟夫环kth> <约瑟夫环kth.cpp> <> <>
 <判断星期几> <判断星期几.cpp> <> <>
 <离散化> <离散化.cpp> <> <>
+<整数三分> <整数三分.cpp> <> <>
 <有根树与prufer序列的转换> <tree\_and\_prufer.cpp> <> <>
 <网格整数点正方形个数> <网格整数点正方形个数.cpp> <> <>
 <模拟退火> <模拟退火.cpp> <> <>
