create 树hash && 树的重心

--- a/c++/图论/config
+++ b/c++/图论/config
@@ -9,4 +9,6 @@
 <ÍÅ> <> <> <ÍÅ>
 <ÍØÆËÅÅÐò> <ÍØÆËÅÅÐò.cpp> <> <>
 <2-sat> <> <> <2-sat>
+<Ê÷µÄÖØÐÄ> <Ê÷µÄÖØÐÄ.cpp> <> <>
+<Ê÷hash> <Ê÷hash.cpp> <> <>
 <Ö§ÅäÊ÷> <Ö§ÅäÊ÷.cpp> <> <>
