--- a/c++/杂项/config
+++ b/c++/杂项/config
@@ -12,3 +12,4 @@
 <矩形面积并> <矩形面积并.cpp> <> <>
 <维护不同颜色最值和次值> <维护不同颜色最值和次值.cpp> <> <>
 <斐波那契01串的第k个字符> <xor\_sum.cpp> <> <>
+<指令集优化头文件> <指令集优化头文件.cpp> <> <>
