--- a/c++/图论/config
+++ b/c++/图论/config
@@ -3,12 +3,10 @@
 <最小生成树> <> <> <最小生成树>
 <二分图匹配> <> <> <二分图匹配>
 <最大流> <> <> <最大流>
-<最小费用最大流> <> <> <最小费用最大流>
-<强连通分量> <强连通分量.cpp> <> <>
-<双联通分量> <> <> <双联通分量>
+<费用流> <> <> <费用流>
+<连通性> <> <> <连通性>
 <团> <> <> <团>
 <拓扑排序> <拓扑排序.cpp> <> <>
 <2-sat> <> <> <2-sat>
-<树的重心> <树的重心.cpp> <> <>
-<树hash> <树hash.cpp> <> <>
 <支配树> <支配树.cpp> <> <>
+<最小斯坦纳树> <最小斯坦纳树.cpp> <> <>
