--- a/c++/字符串/Hash/config
+++ b/c++/字符串/Hash/config
@@ -1,4 +1,4 @@
 <hash> <hash.cpp> <> <>
-<good_hash_prime> <good_hash_prime.cpp> <> <>
+<good\_hash\_prime> <good_hash_prime.cpp> <> <>
 <hash\_map> <hash_map.cpp> <> <>
 <BKDRHash> <BKDRHash.cpp> <> <>
