--- a/c++/数据结构/线段树/config
+++ b/c++/数据结构/线段树/config
@@ -1,4 +1,5 @@
 <线段树> <线段树.cpp>
 <动态开点线段树> <动态开点线段树.cpp>
-<线段树套线段树> <线段树套线段树.cpp>
 <线段树分裂合并> <线段树分裂合并.cpp>
+<区间查询最大子段和> <区间查询最大子段和.cpp>
+<矩形面积并> <矩形面积并.cpp>
