--- a/c++/数据结构/config
+++ b/c++/数据结构/config
@@ -1,18 +1,19 @@
+<ÀëÉ¢»¯> <ÀëÉ¢»¯.cpp> <> <>
 <RMQ> <> <> <RMQ>
 <µ¥µ÷¶ÓÁÐ> <µ¥µ÷¶ÓÁÐ.cpp> <> <>
-<LCA> <> <> <LCA>
-<ÇáÖØÁ´ÆÊ·Ö> <ÇáÖØÁ´ÆÊ·Ö.cpp> <ÇáÖØÁ´ÆÊ·Ö.tex> <>
 <²¢²é¼¯> <> <> <²¢²é¼¯>
 <Ê÷×´Êý×é> <> <> <Ê÷×´Êý×é>
 <Ïß¶ÎÊ÷> <> <> <Ïß¶ÎÊ÷>
-<Ö÷Ï¯Ê÷> <Ö÷Ï¯Ê÷.cpp> <> <>
-<Àî³¬Ê÷> <Àî³¬Ê÷.cpp> <> <>
 <Æ½ºâÊ÷> <> <> <Æ½ºâÊ÷>
 <×ÖµäÊ÷> <> <> <×ÖµäÊ÷>
+<¿É³Ö¾Ã»¯> <> <> <¿É³Ö¾Ã»¯>
+<Ê÷Ì×Ê÷> <> <> <Ê÷Ì×Ê÷>
+<Àî³¬Ê÷> <Àî³¬Ê÷.cpp> <> <>
 <kd-tree> <kd-tree.cpp> <> <>
-<ÐéÊ÷> <ÐéÊ÷.cpp> <> <>
 <pbds¿É²¢¶Ñ> <pbds¿É²¢¶Ñ.cpp> <> <>
 <k²æ¹þ·òÂüÊ÷> <k²æ¹þ·òÂüÊ÷.cpp> <k²æ¹þ·òÂüÊ÷.tex> <>
 <µÑ¿¨¶ûÊ÷> <µÑ¿¨¶ûÊ÷.cpp> <µÑ¿¨¶ûÊ÷.tex> <>
 <ÎöºÏÊ÷> <ÎöºÏÊ÷.cpp> <ÎöºÏÊ÷.tex> <>
 <Äª¶ÓËã·¨> <Äª¶ÓËã·¨.cpp> <> <>
+<ODT> <ODT.cpp> <> <>
+<·Ö¿é> <Block.cpp> <> <>
