--- a/c++/杂项/config
+++ b/c++/杂项/config
@@ -4,12 +4,10 @@
 <xor\_sum(1,n)> <xor_sum.cpp> <> <>
 <约瑟夫环kth> <约瑟夫环kth.cpp> <> <>
 <判断星期几> <判断星期几.cpp> <> <>
-<离散化> <离散化.cpp> <> <>
 <整数三分> <整数三分.cpp> <> <>
-<有根树与prufer序列的转换> <tree\_and\_prufer.cpp> <> <>
+<有根树与prufer序列的转换> <tree_and_prufer.cpp> <> <>
 <网格整数点正方形个数> <网格整数点正方形个数.cpp> <> <>
 <模拟退火> <模拟退火.cpp> <> <>
-<矩形面积并> <矩形面积并.cpp> <> <>
-<维护不同颜色最值和次值> <维护不同颜色最值和次值.cpp> <> <>
-<斐波那契01串的第k个字符> <xor\_sum.cpp> <> <>
-<指令集优化头文件> <指令集优化头文件.cpp> <> <>
+<斐波那契01串的第k个字符> <kth_FibString.cpp> <> <>
+<光速幂> <光速幂.cpp> <> <>
+<倍增求等比数列和> <倍增求等比数列和.cpp> <> <>
