--- a/c++/字符串/自动机/config
+++ b/c++/字符串/自动机/config
@@ -1,5 +1,7 @@
-<AC自动机> <AC自动机.cpp>
-<大字符集AC自动机> <大字符集AC自动机.cpp>
-<后缀自动机> <后缀自动机.cpp>
-<回文自动机> <回文自动机.cpp>
-<序列自动机> <序列自动机.cpp>
+<AC自动机> <AC自动机.cpp> <> <>
+<大字符集AC自动机> <大字符集AC自动机.cpp> <> <>
+<回文自动机> <回文自动机.cpp> <> <>
+<序列自动机> <序列自动机.cpp> <> <>
+<KMP自动机> <KMP自动机.cpp> <> <>
+<后缀自动机> <后缀自动机.cpp> <> <>
+<广义后缀自动机> <广义后缀自动机.cpp> <> <>
