--- a/c++/树/config
+++ b/c++/树/config
@@ -1,6 +1,8 @@
 <LCA> <> <> <LCA>
 <树链剖分> <> <> <树链剖分>
 <树的重心> <树的重心.cpp> <> <>
+<树上倍增> <树上倍增.cpp> <> <>
 <树hash> <树hash.cpp> <> <>
 <虚树> <虚树.cpp> <> <>
+<树分治> <> <> <树分治>
 <Link-Cut-Tree> <Link-Cut-Tree.cpp> <> <>
