--- a/c++/组合数学/组合数/config
+++ b/c++/组合数学/组合数/config
@@ -1,4 +1,2 @@
-<打表> <打表.cpp> <> <>
-<预处理> <预处理.cpp> <> <>
-<Lucas定理> <Lucas定理.cpp> <> <>
-<exLucas> <exLucas.cpp> <> <>
+<公式预处理> <公式预处理.cpp> <> <>
+<杨辉三角递推> <杨辉三角递推.cpp> <> <>
