--- a/c++/图论/config
+++ b/c++/图论/config
@@ -7,6 +7,6 @@
 <连通性> <> <> <连通性>
 <团> <> <> <团>
 <拓扑排序> <拓扑排序.cpp> <> <>
-<2-sat> <> <> <2-sat>
+<2-SAT> <2-SAT.cpp> <> <>
 <支配树> <支配树.cpp> <> <>
 <最小斯坦纳树> <最小斯坦纳树.cpp> <> <>
